syntax = "proto3";

package greeter.v1alpha1;

option go_package = "greeter;greeter";
option csharp_namespace = "Greeter";
option java_multiple_files = true;
option java_outer_classname = "GreeterProto";
option java_package = "com.greeter.v1alpha1";

// Greeter is a simple service which keeps track of who has said hello to it.
service Greeter {

  // SayHello will register a user in the database, and return a nice message 
  // to the caller.
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}

  // GayGoodbye will remove the user from the database, and return a nice 
  // message to the caller.
  rpc SayGoodbye(SayGoodbyeRequest) returns (SayGoodbyeResponse) {}

}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

message SayGoodbyeRequest {
  string name = 1;
}

message SayGoodbyeResponse {
  string message = 1;
}
